# journey_os

./: Cargo.toml  LICENSE  README.md  build.rs  run.bat
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: allocator.rs  apic.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  screen.rs  serial.rs
kernel/src/task/: executor.rs  keyboard.rs
kernel/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  task.rs  vga_buffer.rs
src/task/: executor.rs  keyboard.rs  simple_executor.rs
tests/: basic.rs  basic_boot.rs  heap.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
tests/runner/: Cargo.toml
tests/runner/src/: lib.rs
tests/test_kernels/basic/: Cargo.toml
tests/test_kernels/heap/: Cargo.toml
