[package]
name = "rust_os_journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Version newer than '0.9.23' does not support cargo bootimage
bootloader = { version = "0.9.23", features = ["map_physical_memory"] } 
volatile = "0.4.5"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.6.1"
linked_list_allocator = "0.10.4"
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.0", default-features = false }
futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }

[package.metadata.bootimage]
# The isa-debug-exit device uses port-mapped I/O. The iobase parameter specifies on which port address 
# the device should live (0xf4 is a generally unused port on the x86’s IO bus) and the iosize specifies 
# the port size (0x04 means four bytes).
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
# With this configuration, bootimage maps our success exit code to exit code 0, so that cargo test correctly 
# recognizes the success case and does not count the test as failed.
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false