[package]
name = "journey_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.0"
crossbeam-utils = { version = "0.8.14", default-features = false }
raw-cpuid = "10.6.0"
log = "0.4.17"
noto-sans-mono-bitmap = "0.2.0"
spinning_top = "0.2.4"
volatile = "0.4.5"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.6.1"
linked_list_allocator = "0.10.4"
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.3.2", default-features = false }
futures-util = { version = "0.3.25", default-features = false, features = ["alloc"] }