[package]
name = "test_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
journey_kernel = { path = "../../../kernel" }
bootloader_api = "0.11.0"
uart_16550 = "0.2.18"
x86_64 = "0.14.10"
volatile = "0.4.5"
lazy_static = "1.4.0"